# CosyVoice

./: .gitignore  CLAUDE.md  FAQ.md  README.md  create_prompt_audio.py  debug_japanese_frontend.py  download_models.py  inference_japanese.py  japanese_tts_crosslingual.py  llm_keys.txt  pyproject.toml  requirements-test.txt  requirements.txt  simple_japanese_tts.py  simple_japanese_tts_correct.py  simple_japanese_tts_fixed.py  test_japanese_conversion.py  test_japanese_frontend_simple.py
.github/workflows/: lint.yml  test.yml
asset/prompts/: README.md
cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
cosyvoice/flow/: decoder.py
cosyvoice/transformer/: attention.py
cosyvoice/utils/: executor.py  frontend_utils.py  japanese_frontend.py  japanese_utils.py  train_utils.py
docs/: cosyvoice3-unity-onnx-investigation.md  existing-onnx-projects-survey.md  implementation-roadmap.md  japanese_improvement_guide.md  onnx-export-implementation.md  onnx-inference-guide.md  quantization-analysis.md  reference-projects-technical-specs.md  tech-article-hatena.md  tokenizer_comparison.md  unity-complete-onnx-strategy.md  unity-sentis-implementation-guide.md  unity-sentis-investigation.md
docs/benchmarks/: evaluation_metrics.md
docs/implementation/: phase1_quick_wins.md
examples/: japanese_tts_demo.py
examples/libritts/cosyvoice2/: run.sh  run_dpo.sh
examples/libritts/cosyvoice2/conf/: cosyvoice2_japanese.yaml  ds_stage2.json
runtime/triton_trtllm/: docker-compose.dit.yml  docker-compose.yml
scripts/: convert_to_fp16.py  debug_f0_predictor.py  debug_first_tokens.py  export_flow_onnx.py  export_hift_onnx.py  export_llm_onnx.py  export_onnx_sentis.py  export_remaining_onnx.py  generate_test_prompts.py  onnx_inference_hybrid.py  onnx_inference_pure.py  onnx_inference_working.py  test_e2e_comparison.py  test_e2e_simple.py  test_onnx_components.py  test_onnx_components_fp32.py  upload_to_huggingface.py  verify_existing_onnx.py  verify_hift_onnx.py
tests/: __init__.py  conftest.py  test_file_utils.py  test_frontend_utils.py  test_japanese_frontend.py
tools/: make_parquet_list.py
